--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <nav class="navbar navbar-expand-md position-sticky top-0">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="./img/logoG.png" alt="logo strony GameHaven">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="ti ti-menu-2"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto">
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    <a class="nav-link" href="#aboutus">o nas</a>
+                    <a class="nav-link" href="#prices">ceny</a>
+                    <a class="nav-link" href="#pc">nasze pc</a>
+                    <a class="nav-link" href="#team">team</a>
+                    <a class="nav-link" href="#achievements">osiągnięcia</a>
+                    <a class="nav-link" href="#contact">kontakt</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
