--- a/index.html
+++ b/index.html
@@ -58,22 +58,87 @@
             tło na obraz</button>
     </header>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <main>
+        <section id="aboutus" class="aboutus bg-light py-5">
 
-    <section id="aboutus" style="height: 30vh; background-color: #ddd"></section>
+            <div class="container">
+                <h2 class="section-title">o nas</h2>
+                <div class="underline"></div>
 
+                <div class="row">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="ti ti-door"></i></p>
+                        <p class="aboutus-card-title mb-1">Pomieszczenia dla graczy</p>
+                        <p class="aboutus-card-text">Oferujemy w pełni wyposażone pokoje gamingowe z PC, monitorami i
+                            fotelami dla graczy.
+                        </p>
+                    </div>
 
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="ti ti-device-desktop-cog"></i></p>
+                        <p class="aboutus-card-title mb-1">Mistrzowska konfiguracja</p>
+                        <p class="aboutus-card-text">Nasze PC mają niebywałe możliwości, poradzą sobie z najbardziej
+                            wymagającymi grami.</p>
+                    </div>
 
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                        <p><i class="ti ti-lamp"></i></p>
+                        <p class="aboutus-card-title mb-1">Miejsca relaksu</p>
+                        <p class="aboutus-card-text">Po intensywnej grze zrelaksuj się w naszej strefie – wygodne
+                            kanapy, przekąski i napoje czekają!</p>
+                    </div>
+                </div>
+            </div>
 
+        </section>
+
+        <section class="aboutus-hero py-5">
+            <div class="aboutus-shadow"></div>
+
+            <div class="container">
+                <h2 class="section-title">Korzystamy ze znanych platform</h2>
+                <div class="underline"></div>
+
+                <div class="row justify-content-center">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">Steam</p>
+                        <p class="icon-platform"><i class="ti ti-brand-steam"></i></p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">Origin</p>
+                        <p class="icon-platform"><i class="ti ti-device-gamepad-2"></i></p>
+                    </div>
+
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hero-item">
+                        <p class="aboutus-hero-title mb-1">Epic Games</p>
+                        <p class="icon-platform">
+                            <svg width="50" height="50" fill="currentColor">
+                                <use xlink:href="assets/icons.svg#epic"></use>
+                            </svg>
+                        </p>
+                    </div>
+
+                    <div class="center-platform d-flex justify-content-center flex-column flex-sm-row">
+                        <div class="col-sm-6 col-md-4 text-center aboutus-hero-item">
+                            <p class="aboutus-hero-title mb-1">GOG</p>
+                            <p class="icon-platform">
+                                <svg width="50" height="50" fill="currentColor">
+                                    <use xlink:href="assets/icons.svg#gog"></use>
+                                </svg>
+                            </p>
+                        </div>
+                        <div class="col-sm-6 col-md-4 text-center aboutus-hero-item">
+                            <p class="aboutus-hero-title mb-1">uPlay</p>
+                            <p class="icon-platform">
+                                <svg width="50" height="50" fill="currentColor">
+                                    <use xlink:href="assets/icons.svg#uplay"></use>
+                                </svg>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
