--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     <a class="nav-link" href="#aboutus">o nas</a>
+                    <a class="nav-link" href="#pc-gaming-haven">nasze pc</a>
                     <a class="nav-link" href="#prices">ceny</a>
-                    <a class="nav-link" href="#pc">nasze pc</a>
                     <a class="nav-link" href="#team">team</a>
                     <a class="nav-link" href="#achievements">osiągnięcia</a>
                     <a class="nav-link" href="#contact">kontakt</a>
@@ -137,6 +137,182 @@
                         </div>
                     </div>
                 </div>
+        </section>
+
+        <section id="pc-gaming-haven" class="pc-gaming-haven bg-light py-5">
+            <h2 class="section-title">nasze pc</h2>
+            <div class="underline"></div>
+
+            <div class="container">
+
+                <div class="card-group d-lg-none">
+                    <div class="row row-cols-1 row-cols-sm-2 g-3">
+                        <div class="col">
+
+                            <div class="card me-3 h-100">
+                                <img src="./assets/graphics-card-small.jpg" class="card-img-top "
+                                    alt="gaming computer with powerful graphics card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Karty graficzne</h5>
+                                    <p class="card-text">
+                                        Wydajne karty graficzne, które poradzą sobie z <strong>najbardziej wymagającymi
+                                            grami</strong>. <br>
+                                        <strong>GPU:</strong> <span class="gpu-name">MSI GeForce RTX 3090 SUPRIM X
+                                            24G</span> – najmocniejsza karta graficzna na świecie.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+
+                            <div class="card me-3 h-100">
+                                <img src="./assets/cpu-small.jpg" class="card-img-top" alt="gaming computer with cpu">
+                                <div class="card-body">
+                                    <h5 class="card-title">Procesory z Intela lub AMD</h5>
+                                    <p class="card-text">
+                                        <strong>CPU-Intel:</strong> Intel CORE i9-10900KF 5.30GHz LGA14A
+                                        – procesor o <strong>najszybszym taktowaniu single-core</strong>.<br>
+                                        <strong>CPU-AMD:</strong> Ryzen 9 5900X 4.8GHz AM4
+                                        – wydajny model do zastosowań profesjonalnych i gamingowych.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card me-3 h-100">
+                                <img src="./assets/watercooling-small.jpg" class="card-img-top"
+                                    alt="watercooling system">
+                                <div class="card-body">
+                                    <h5 class="card-title">System chłodzenia wodnego</h5>
+                                    <p class="card-text"> Korzystamy z <strong>najnowocześniejszych systemów
+                                            chłodzenia</strong>. <br>
+                                        <strong>Przykład:</strong> <span class="cooling-name">Corsair iCUE H115i ELITE
+                                            CAPELLIX</span> – chłodzenie dla wymagających użytkowników. <br>
+                                        Bardzo wydajne, a przy tym niezwykle ciche. Dzięki możliwości synchronizacji z
+                                        urządzeniami kompatybilnymi z iCUE, Twój gamingowy komputer osiągnie
+                                        <strong>maksymalną wydajność i efektowny wygląd</strong>.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card me-3 h-100">
+                                <img src="./assets/design-pc-small.jpg" class="card-img-top" alt="design pc gamer">
+                                <div class="card-body">
+                                    <h5 class="card-title">Nowoczesny design naszych PC</h5>
+                                    <p class="card-text">
+                                        <strong>Sam wygląd naszych komputerów przyciąga uwagę</strong>. <br>
+                                        <strong>Obudowa PC:</strong> <span class="case-name">Thermaltake Core P3
+                                            Tempered Glass</span> – styl i funkcjonalność w jednym. <br>
+                                        <strong>Elementy z podświetleniem RGB:</strong>
+                                    </p>
+                                    <ul class="rgb-list list-unstyled">
+                                        <li>Płyty główne</li>
+                                        <li>Wentylatory</li>
+                                        <li>Karty graficzne</li>
+                                        <li>Klawiatury</li>
+                                        <li>Zasilacze</li>
+                                        <li>Chłodzenie procesora</li>
+                                        <li>Obudowy</li>
+                                        <li><strong>A nawet... podkładki pod myszki!</strong> 🖱️</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div id="carouselExampleCaptions" class="carousel slide d-none d-lg-block">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./assets/graphics-card-big.jpg" class="d-block w-100"
+                                alt="gaming computer with powerful graphics card">
+                            <div class="carousel-caption d-block">
+                                <h5>Karty graficzne</h5>
+                                <p>
+                                    Wydajne karty graficzne, które poradzą sobie z <strong>najbardziej wymagającymi
+                                        grami</strong>. <br>
+                                    <strong>GPU:</strong> <span class="gpu-name">MSI GeForce RTX 3090 SUPRIM X
+                                        24G</span> – najmocniejsza karta graficzna na świecie.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/cpu-big.jpg" class="d-block w-100" alt="gaming computer with cpu">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Procesory z Intela lub AMD</h5>
+                                <p>
+                                    <strong>CPU-Intel:</strong> Intel CORE i9-10900KF 5.30GHz LGA14A
+                                    – procesor o <strong>najszybszym taktowaniu single-core</strong>.<br>
+                                    <strong>CPU-AMD:</strong> Ryzen 9 5900X 4.8GHz AM4
+                                    – wydajny model do zastosowań profesjonalnych i gamingowych.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/watercooling-big.jpg" class="d-block w-100" alt="watercooling system">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>System chłodzenia wodnego</h5>
+                                <p>
+                                    Korzystamy z <strong>najnowocześniejszych systemów chłodzenia</strong>. <br>
+                                    <strong>Przykład:</strong> <span class="cooling-name">Corsair iCUE H115i ELITE
+                                        CAPELLIX</span> – chłodzenie dla wymagających użytkowników. <br>
+                                    Bardzo wydajne, a przy tym niezwykle ciche. Dzięki możliwości synchronizacji z
+                                    urządzeniami kompatybilnymi z iCUE, Twój gamingowy komputer osiągnie
+                                    <strong>maksymalną wydajność i efektowny wygląd</strong>.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/design-pc-big.jpg" class="d-block w-100" alt="design pc gamer">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Nowoczesny design naszych PC</h5>
+                                <p>
+                                    <strong>Sam wygląd naszych komputerów przyciąga uwagę</strong>. <br>
+                                    <strong>Obudowa PC:</strong> <span class="case-name">Thermaltake Core P3 Tempered
+                                        Glass</span> – styl i funkcjonalność w jednym. <br>
+                                    <strong>Elementy z podświetleniem RGB:</strong>
+                                </p>
+                                <ul class="rgb-list list-unstyled">
+                                    <li>Płyty główne</li>
+                                    <li>Wentylatory</li>
+                                    <li>Karty graficzne</li>
+                                    <li>Klawiatury</li>
+                                    <li>Zasilacze</li>
+                                    <li>Chłodzenie procesora</li>
+                                    <li>Obudowy</li>
+                                    <li><strong>A nawet... podkładki pod myszki!</strong> 🖱️</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"><i
+                                class="ti ti-circle-chevron-left-filled"></i></i>
+                        </span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"><i
+                                class="ti ti-circle-chevron-right-filled"></i></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
         </section>
     </main>
 
