--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     <a class="nav-link" href="#aboutus">o nas</a>
                     <a class="nav-link" href="#pc-gaming-haven">nasze pc</a>
-                    <a class="nav-link" href="#prices">ceny</a>
+                    <a class="nav-link" href="#prices">cennik</a>
                     <a class="nav-link" href="#team">team</a>
                     <a class="nav-link" href="#achievements">osiągnięcia</a>
                     <a class="nav-link" href="#contact">kontakt</a>
@@ -46,7 +46,7 @@
         </video>
         <div class="hero-text text-center p-3">
             <div class="hero-text-inner">
-                <h1>Witajcie w Game<span class="blue-text">Haven</span></h1>
+                <h1>Game<span class="blue-text">Haven</span> — Klub Gamingowy <br> dla Fanów PC i Konsol</h1>
                 <p>Przystań dla epickiej rozgrywki, gdzie pasja do gier łączy graczy!</p>
                 <a href="#aboutus" class="btn btn-outline-light mt-3 text-uppercase">poznaj nas</a>
             </div>
@@ -139,7 +139,7 @@
                 </div>
         </section>
 
-        <section id="pc-gaming-haven" class="pc-gaming-haven bg-light py-5">
+        <section id="pc-gaming-haven" class="pc-gaming-haven py-5">
             <h2 class="section-title">nasze pc</h2>
             <div class="underline"></div>
 
@@ -224,7 +224,8 @@
                 </div>
 
 
-                <div id="carouselExampleCaptions" class="carousel slide d-none d-lg-block">
+                <div id="carouselExampleCaptions" class="carousel slide carousel-fade d-none d-lg-block"
+                    data-bs-ride="carousel" data-bs-interval="4000">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
                             class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -313,6 +314,89 @@
                     </button>
                 </div>
             </div>
+        </section>
+
+        <section id="prices" class="prices py-5 bg-light">
+            <h2 class="section-title">cennik</h2>
+            <div class="underline"></div>
+
+            <div class="container">
+                <div class="price-wrap row text-center justify-content-center">
+
+                    <div class="col-xl-4 col-md-6 mb-3">
+
+                        <div class="price-box pc-item">
+                            <h4 class="mb-5">PC</h4>
+                            <p class="mb-2">Stanowisko 1os.</p>
+                            <ul class="price-list list-unstyled">
+                                <li class="mb-1">18zł / 1h</li>
+                                <li>49zł / 3h</li>
+                                <li>69zł / 5h</li>
+                                <li>99zł / 8h</li>
+                            </ul>
+                            <p class="accessories">Akcesoria PC: w cenie</p>
+                            <a href="#rezerwacja" class="link" aria-label="Przejdź do rezerwacji stanowiska">Wybierz
+                                datę</a>
+
+                            <div class="img-wrap img-pc">
+                                <img src="assets/img-prices/woman-small.jpg"
+                                    alt="Kobieta przy stanowisku gamingowym PC w GameHaven">
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-5">
+                        <div class="price-box ps-item">
+                            <h4 class="mb-5">PlayStation</h4>
+                            <p class="mb-2">Stanowisko 1os.</p>
+                            <ul class="price-list list-unstyled">
+                                <li class="mb-1">15zł / 1h</li>
+                                <li>39zł / 3h</li>
+                                <li>59zł / 5h</li>
+                                <li>89zł / 8h</li>
+                            </ul>
+                            <p class="pad">Dodatkowy pad: +5zł</p>
+
+                            <a href="#rezerwacja" class="link" aria-label="Przejdź do rezerwacji stanowiska">Wybierz
+                                datę</a>
+                            <div class="img-wrap img-ps">
+                                <img src="assets/img-prices/soccer-small.png" alt="Piłka na trawie">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6 mb-3">
+                        <div class="price-box xbox-item">
+                            <h4 class="mb-5">Xbox</h4>
+                            <p class="mb-2">Stanowisko 1os.</p>
+                            <ul class="price-list list-unstyled">
+                                <li class="mb-1">15zł / 1h</li>
+                                <li>39zł / 3h</li>
+                                <li>59zł / 5h</li>
+                                <li>89zł / 8h</li>
+                            </ul>
+                            <p class="pad">Dodatkowy pad: +5zł</p>
+
+                            <a href="#rezerwacja" class="link" aria-label="Przejdź do rezerwacji stanowiska">Wybierz
+                                datę</a>
+                            <div class="img-wrap img-xbox">
+                                <img src="assets/img-prices/car-small.png" alt="Sportowy samochód">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <p class="price-info text-center">
+                    Skorzystaj z jednego z trzech głównych pakietów, lub <a href="#contact">skontaktuj się</a> z
+                    nami i zobacz oferty personalizowane.
+                </p>
+                <p class="text-muted text-center">
+                    Pamiętaj też, że przekąski i napoje w strefie relaksu są dodatkowo płatne. Ceny w strefie
+                    poznasz
+                    będąc już na miejscu, bez obaw mamy atrakcyjne oferty.
+                </p>
+            </div>
+
         </section>
     </main>
 
