added section team

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -398,13 +399,202 @@
             </div>
 
         </section>
+
+        <section id="team" class="team py-5 bg-light">
+            <h2 class="section-title">zespół</h2>
+            <div class="underline"></div>
+
+            <div class="swiper">
+                <div class="swiper-wrapper">
+
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="/funny-assets/boy1.jpg" class="card-img-top img-fluid" alt="Amal - Tester gier">
+                            <div class="card-body ">
+                                <h5 class="card-title mb-3">Tester Gier</h5>
+                                <p class="card-text">Amal jest świetny w swojej dziedzinie; <span>żadne błędy w grach
+                                        nie są mu straszne.</span></p>
+
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="/funny-assets/man1.jpg" class="card-img-top img-fluid"
+                                alt="Jagdisz inżynier sprzętu komputerowego">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">Inżynier sprzętu komputerowego</h5>
+                                <p class="card-text">Jagdisz, nasz najlepszy specjalista od wykrywania usterek w
+                                    GameHaven, pochodzi z Indii. <span>Twierdzi, że to ta czapka daje mu
+                                        supermożliwości.</span></p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="assets/team/portrait-woman1.jpg" class="card-img-top img-fluid"
+                                alt="Copywriter Ewa">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">Copywriter</h5>
+                                <p class="card-text">Ewa zajmuje się pisaniem blogów oraz zarządzaniem informacjami na
+                                    stronie. <span>Dba, aby treści były angażujące i wartościowe dla naszych
+                                        czytelników.</span></p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="/funny-assets/man3.jpg" class="card-img-top img-fluid"
+                                alt="Arkadiusz nasz dramaturg komputerowy">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">Dramaturg komputerowy</h5>
+                                <p class="card-text">Arkadiusz to bardzo wrażliwa osoba, która dzięki swojej uważności
+                                    <span>szybko wykrywa ewentualne nagłe usterki.</span>
+                                </p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="/funny-assets/man4.jpg" class="card-img-top img-fluid" alt="Ochroniarz Paweł">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">Ochroniarz Paweł</h5>
+                                <p class="card-text"><span>Ochroniarz naszego klubu GameHaven</span>, potrafi szybko
+                                    rozwiązać spory
+                                    między niezadowolonymi graczami.</p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="assets/team/portrait-woman2.jpg" class="card-img-top img-fluid special-image-top"
+                                alt="Paulina księgowa GameHaven">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">Paulina</h5>
+                                <p class="card-text">Paulina jest naszą księgową, która <span>dba o finanse
+                                        GameHaven.</span> Jej doświadczenie sprawia, że wszystkie sprawy finansowe są
+                                    zawsze pod
+                                    kontrolą.</p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="assets/team/portrait-woman3.jpg" class="card-img-top img-fluid special-image"
+                                alt="Patrycja mistrzyni w social media">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">Specjalistka ds. Social Media</h5>
+                                <p class="card-text">Patrycja <span> dba o aktualne i angażujące treści.</span> Dzięki
+                                    jej kreatywności i znajomości trendów nasze profile zawsze przyciągają uwagę.</p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="assets/team/portrait-man1.jpg" class="card-img-top img-fluid"
+                                alt="Piotr logistyk">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">Specjalista ds. Logistyki</h5>
+                                <p class="card-text">Piotr <span> dba o sprawną realizację zamówień i zarządzanie
+                                        sklepem.</span> Jego organizacyjne umiejętności są kluczowe dla naszego sukcesu.
+                                </p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="assets/team/portrait-man2.jpg" class="card-img-top img-fluid"
+                                alt="Tomek organizuje eventy dla firmy GameHaven">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">Specjalista ds. Eventów</h5>
+                                <p class="card-text">Tomek <span> dba, aby każde wydarzenie w GameHaven było
+                                        wyjątkowe.</span> Jego kreatywność i organizacyjne umiejętności są kluczowe dla
+                                    naszego sukcesu.</p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <img src="assets/team/portrait-man3.jpg" class="card-img-top img-fluid"
+                                alt="Michał zarządza naszą strefą relaksu">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">Michał</h5>
+                                <p class="card-text">Michał to strażnik relaksu, <span>dba o nasz sklep i pokój
+                                        relaksu.</span> Jego uśmiech i troska sprawiają, że każdy czuje
+                                    się w GameHaven jak w domu.</p>
+                            </div>
+                            <div class="card-footer d-flex justify-content-around">
+                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+            </div>
+
+            <div class="team-shadow"></div>
+        </section>
+
     </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./js/swiper.js"></script>
     <script src="./js/video.js"></script>
     <script src="./js/main.js"></script>
 </body>
