added section achievements

--- a/index.html
+++ b/index.html
@@ -587,6 +587,49 @@
             <div class="team-shadow"></div>
         </section>
 
+        <section id="achievements" class="achievements py-5">
+            <h2 class="section-title">Co nas wyróżnia?</h2>
+            <div class="underline"></div>
+
+            <div class="container">
+                <div class="row text-center achievements-list">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item mb-3">
+                        <i class="ti ti-users"></i>
+                        <p class="achiev-number">100%</p>
+                        <p class="achiev-text">Zadowoloych klientów</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                        <i class="ti ti-devices-pc"></i>
+                        <p class="achiev-number">20</p>
+                        <p class="achiev-text">Stanowisk PC</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                        <i class="ti ti-door"></i>
+                        <p class="achiev-number">3</p>
+                        <p class="achiev-text">Sale treningowe</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                        <i class="ti ti-playstation-triangle"></i>
+                        <p class="achiev-number">3</p>
+                        <p class="achiev-text">Play station 5</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                        <i class="ti ti-device-gamepad-2"></i>
+                        <p class="achiev-number">3</p>
+                        <p class="achiev-text">Xbox One</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                        <i class="ti ti-cardboards"></i>
+                        <p class="achiev-number">3</p>
+                        <p class="achiev-text">VR</p>
+                    </div>
+
+                </div>
+            </div>
+            </div>
+
+        </section>
+
     </main>
 
 
