--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                             wymagającymi grami.</p>
                     </div>
 
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover mx-auto">
                         <p><i class="ti ti-lamp"></i></p>
-                        <p class="aboutus-card-title mb-1">Miejsca relaksu</p>
+                        <p class="aboutus-card-title mb-1 mx-4">Miejsca relaksu</p>
                         <p class="aboutus-card-text">Po intensywnej grze zrelaksuj się w naszej strefie – wygodne
                             kanapy, przekąski i napoje czekają!</p>
                     </div>
@@ -409,7 +409,7 @@
 
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="/funny-assets/boy1.jpg" class="card-img-top img-fluid" alt="Amal - Tester gier">
+                            <img src="/assets/team/boy1.jpg" class="card-img-top img-fluid" alt="Amal - Tester gier">
                             <div class="card-body ">
                                 <h5 class="card-title mb-3">Tester Gier</h5>
                                 <p class="card-text">Amal jest świetny w swojej dziedzinie; <span>żadne błędy w grach
@@ -425,7 +425,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="/funny-assets/man1.jpg" class="card-img-top img-fluid"
+                            <img src="/assets/team/man1.jpg" class="card-img-top img-fluid"
                                 alt="Jagdisz inżynier sprzętu komputerowego">
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Inżynier sprzętu komputerowego</h5>
@@ -459,7 +459,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="/funny-assets/man3.jpg" class="card-img-top img-fluid"
+                            <img src="/assets/team/man3.jpg" class="card-img-top img-fluid"
                                 alt="Arkadiusz nasz dramaturg komputerowy">
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Dramaturg komputerowy</h5>
@@ -476,7 +476,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="/funny-assets/man4.jpg" class="card-img-top img-fluid" alt="Ochroniarz Paweł">
+                            <img src="/assets/team/man4.jpg" class="card-img-top img-fluid" alt="Ochroniarz Paweł">
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Ochroniarz Paweł</h5>
                                 <p class="card-text"><span>Ochroniarz naszego klubu GameHaven</span>, potrafi szybko
@@ -583,8 +583,6 @@
                 <div class="swiper-button-next"></div>
 
             </div>
-
-            <div class="team-shadow"></div>
         </section>
 
         <section id="achievements" class="achievements py-5">
@@ -628,6 +626,97 @@
             </div>
             </div>
 
+        </section>
+
+        <section id="contact" class="contact py-5">
+            <h2 class="section-title">kontakt</h2>
+            <div class="underline"></div>
+
+            <div class="container">
+                <!-- Bottom row with contact-us -->
+                <div class="row mb-5 contact-us">
+
+                    <!-- Column 1: Contact info -->
+                    <div class="col-sm-6 col-lg-4 contact-item order-1">
+                        <div class="contact-info">
+                            <h3 class="contact-title">Dane kontaktowe</h3>
+                            <p class="contact-text"><span>Adres: </span>ul. Ksiażki 1, 00-000 Warszawa</p>
+                            <p class="contact-text"><span>Telefon: </span>+48 123 456 789</p>
+                            <p class="contact-text"><span>Email: </span>gamehaven@gmail.com</p>
+                        </div>
+                    </div>
+
+                    <!-- Column 2: Social media -->
+                    <div class="col-lg-4 contact-item order-0 order-lg-1">
+                        <div class="social-media">
+                            <h3 class="contact-title">Social Media</h3>
+                            <div class="link-media">
+                                <a href="https://www.facebook.com/" target="_blank"><i
+                                        class="ti ti-brand-facebook"></i></a>
+                                <a href="https://www.twitter.com/" target="_blank"><i
+                                        class="ti ti-brand-twitter"></i></a>
+                                <a href="https://www.linkedin.com/" target="_blank"><i class="ti ti-brand-linkedin"></i>
+                                </a>
+                                <a href="https://www.instagram.com/" target="_blank"><i
+                                        class="ti ti-brand-instagram"></i></a>
+                                <a href="https://www.youtube.com/" target="_blank"><i
+                                        class="ti ti-brand-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Column 3: Opening hours -->
+                    <div class="col-sm-6 col-lg-4 contact-item order-1">
+                        <div class="opening-hours">
+                            <h3 class="opening-title">Godziny otwarcia</h3>
+                            <p class="opening-text"><span>Pon-Pt:</span> 9:00 - 17:00</p>
+                            <p class="opening-text"><span>Sob:</span> 10:00 - 14:00</p>
+                            <p class="opening-text"><span>Niedz:</span> Zamknięte</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- Bottom row with map and form -->
+                <div class="row">
+                    <!-- Left column: Map -->
+                    <div class="col-md-6 mb-4 map-item">
+                        <div class="map-nav d-flex align-items-center ms-2">
+                            <p class="map-icon me-3"><i class="ti ti-map-search"></i></p>
+                            <h3>Gdzie jesteśmy?</h3>
+                        </div>
+                        <div class="map-container">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2443.600123456789!2d21.01234567891234!3d52.2296756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTLCsDEzJzQ2LjgiTiAyMcKwMDAnNDQuMyJF!5e0!3m2!1spl!2spl!4v1631234567890!5m2!1spl!2spl"
+                                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                    </div>
+
+                    <!-- Right columna: Contact form -->
+                    <div class="col-md-6 mb-4 contact-item">
+                        <div class="contact-form">
+                            <div class="contact-nav d-flex align-items-center me-3">
+                                <h3 class="contact-title me-3">Napisz do nas</h3>
+                                <p class="contact-icon mb-2"><i class="ti ti-mail-fast"></i></p>
+                            </div>
+                            <form>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="email" name="email"
+                                        placeholder="Adres email" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="message" class="form-label">Wiadomość</label>
+                                    <textarea class="form-control" id="message" name="message" rows="3"
+                                        placeholder="Wiadomość" required></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Wyślij</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </section>
 
     </main>
