--- a/index.html
+++ b/index.html
@@ -719,6 +719,12 @@
             </div>
         </section>
 
+        <footer class="bg-dark text-light py-4 text-center">
+            <p class="mb-0">
+                &copy; 2025 | GameHaven
+            </p>
+        </footer>
+
     </main>
 
 
