improved pricing section

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             <a href="#rezerwacja" class="link" aria-label="Przejdź do rezerwacji stanowiska">Wybierz
                                 datę</a>
                             <div class="img-wrap img-xbox">
-                                <img src="assets/img-prices/car-small.png" alt="Sportowy samochód">
+                                <img src="assets/img-prices/jaime-marrero-unsplash.jpg" alt="Stanowisko Xbox">
                             </div>
 
                         </div>
