added animations using AOS

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -46,9 +47,13 @@
             Your browser does not support the video tag.
         </video>
         <div class="hero-text text-center p-3">
-            <div class="hero-text-inner">
-                <h1>Game<span class="blue-text">Haven</span> — Klub Gamingowy <br> dla Fanów PC i Konsol</h1>
-                <p>Przystań dla epickiej rozgrywki, gdzie pasja do gier łączy graczy!</p>
+            <div class="hero-text-inner" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
+                data-aos-easing="ease-in-out">
+                <h1 data-aos="fade-up" data-aos-delay="200">Game<span class="blue-text">Haven</span> — Klub Gamingowy
+                    <br> dla Fanów PC i Konsol
+                </h1>
+                <p data-aos="fade-up" data-aos-delay="400">Przystań dla epickiej rozgrywki, gdzie pasja do gier łączy
+                    graczy!</p>
                 <a href="#aboutus" class="btn btn-outline-light mt-3 text-uppercase">poznaj nas</a>
             </div>
         </div>
@@ -67,26 +72,31 @@
                 <div class="underline"></div>
 
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="ti ti-door"></i></p>
-                        <p class="aboutus-card-title mb-1">Pomieszczenia dla graczy</p>
-                        <p class="aboutus-card-text">Oferujemy w pełni wyposażone pokoje gamingowe z PC, monitorami i
-                            fotelami dla graczy.
-                        </p>
+                    <div class="col-sm-6 col-md-4" data-aos="zoom-in-up" data-aos-duration="400">
+                        <div class="text-center aboutus-hover">
+                            <p><i class="ti ti-door"></i></p>
+                            <p class="aboutus-card-title mb-1">Pomieszczenia dla graczy</p>
+                            <p class="aboutus-card-text">Oferujemy w pełni wyposażone pokoje gamingowe z PC, monitorami
+                                i
+                                fotelami dla graczy.
+                            </p>
+                        </div>
                     </div>
-
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover">
-                        <p><i class="ti ti-device-desktop-cog"></i></p>
-                        <p class="aboutus-card-title mb-1">Mistrzowska konfiguracja</p>
-                        <p class="aboutus-card-text">Nasze PC mają niebywałe możliwości, poradzą sobie z najbardziej
-                            wymagającymi grami.</p>
+                    <div class="col-sm-6 col-md-4" data-aos="zoom-in-up" data-aos-duration="800">
+                        <div class="text-center aboutus-hover">
+                            <p><i class="ti ti-device-desktop-cog"></i></p>
+                            <p class="aboutus-card-title mb-1">Mistrzowska konfiguracja</p>
+                            <p class="aboutus-card-text">Nasze PC mają niebywałe możliwości, poradzą sobie z najbardziej
+                                wymagającymi grami.</p>
+                        </div>
                     </div>
-
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover mx-auto">
-                        <p><i class="ti ti-lamp"></i></p>
-                        <p class="aboutus-card-title mb-1 mx-4">Miejsca relaksu</p>
-                        <p class="aboutus-card-text">Po intensywnej grze zrelaksuj się w naszej strefie – wygodne
-                            kanapy, przekąski i napoje czekają!</p>
+                    <div class="col-sm-6 col-md-4" data-aos="zoom-in-up" data-aos-duration="1200">
+                        <div class="text-center aboutus-hover mx-auto">
+                            <p><i class="ti ti-lamp"></i></p>
+                            <p class="aboutus-card-title mb-1 mx-4">Miejsca relaksu</p>
+                            <p class="aboutus-card-text">Po intensywnej grze zrelaksuj się w naszej strefie – wygodne
+                                kanapy, przekąski i napoje czekają!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -100,7 +110,7 @@
                 <h2 class="section-title">Korzystamy ze znanych platform</h2>
                 <div class="underline"></div>
 
-                <div class="row justify-content-center">
+                <div class="row justify-content-center" data-aos="zoom-in-up" data-aos-duration="1800">
                     <div class="col-sm-6 col-md-4 text-center aboutus-hero-item">
                         <p class="aboutus-hero-title mb-1">Steam</p>
                         <p class="icon-platform"><i class="ti ti-brand-steam"></i></p>
@@ -591,32 +601,32 @@
 
             <div class="container">
                 <div class="row text-center achievements-list">
-                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item mb-3">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item mb-3" data-aos="zoom-in" data-aos-delay="100">
                         <i class="ti ti-users"></i>
                         <p class="achiev-number">100%</p>
                         <p class="achiev-text">Zadowoloych klientów</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item" data-aos="zoom-in" data-aos-delay="50">
                         <i class="ti ti-devices-pc"></i>
                         <p class="achiev-number">20</p>
                         <p class="achiev-text">Stanowisk PC</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item" data-aos="zoom-in" data-aos-delay="200">
                         <i class="ti ti-door"></i>
                         <p class="achiev-number">3</p>
                         <p class="achiev-text">Sale treningowe</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item" data-aos="zoom-in" data-aos-delay="250">
                         <i class="ti ti-playstation-triangle"></i>
                         <p class="achiev-number">3</p>
                         <p class="achiev-text">Play station 5</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item" data-aos="zoom-in" data-aos-delay="100">
                         <i class="ti ti-device-gamepad-2"></i>
                         <p class="achiev-number">3</p>
                         <p class="achiev-text">Xbox One</p>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item">
+                    <div class="col-md-6 col-lg-4 col-xl-2 achiev-item" data-aos="zoom-in" data-aos-delay="300">
                         <i class="ti ti-cardboards"></i>
                         <p class="achiev-number">3</p>
                         <p class="achiev-text">VR</p>
@@ -732,6 +742,8 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="/js/aos-animations.js"></script>
     <script src="./js/swiper.js"></script>
     <script src="./js/video.js"></script>
     <script src="./js/main.js"></script>
