configure contact form email via Gmail and Nodemailer with environment-based TLS

--- a/index.html
+++ b/index.html
@@ -809,11 +809,11 @@
                                 <h3 class="contact-title me-3">Napisz do nas</h3>
                                 <p class="contact-icon mb-2"><i class="ti ti-mail-fast"></i></p>
                             </div>
-                            <form>
+                            <form id="contact-form-id">
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email</label>
                                     <input type="email" class="form-control" id="email" name="email"
-                                        placeholder="Adres email" required>
+                                        placeholder="Twój adres email" required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="message" class="form-label">Wiadomość</label>
@@ -856,6 +856,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="js/reservation.js"></script>
+    <script src="js/contact.js"></script>
     <script src="js/current-year.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
